tests/sawn/fixtures/invalid/27_value_brace_literal.sawn
// INVALID: {} as a value (values are scalars only)
data={}
